Fixing announcement bar scroll with proper spacing

--- a/partials/home/logo-carousel.html
+++ b/partials/home/logo-carousel.html
@@ -4,7 +4,7 @@
     <div class="absolute left-0 top-0 bottom-0 w-12 bg-linear-to-r from-brand-light to-transparent z-10 pointer-events-none"></div>
     <!-- Right fade -->
     <div class="absolute right-0 top-0 bottom-0 w-12 bg-linear-to-l from-brand-light to-transparent z-10 pointer-events-none"></div>
-    <div class="logo-scroll flex gap-16">
+    <div class="logo-scroll inline-flex w-max gap-16">
       <!-- Set 1 -->
       <img src="/assets/logos/Colorescience-Logo 1.png" alt="Colorescience" class="max-h-8 max-w-32 w-auto h-auto object-contain shrink-0 grayscale">
       <img src="/assets/logos/Dermaroller-Logo-full 1.png" alt="Dermaroller" class="max-h-8 max-w-32 w-auto h-auto object-contain shrink-0 grayscale">
