--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,18 +1,11 @@
-<header x-data="navigationMenu()" class="relative z-50">
-  <!-- Announcement bar -->
-  <div class="bg-brand-primary-700 px-4 py-2 text-brand-light rounded-3xl mb-3 text-center">
-    <span class="md:text-sm text-xs">
-      <p>Free Next-Working-Day Delivery – Available once daily before 1pm on orders over £125*</p>
-    </span>
-  </div>
-  
+<header x-data="navigationMenu()" class="relative z-50">  
   <!-- Navigation -->
   <div class="flex flex-wrap xl:gap-4 mb-3 w-full max-xl:border border-brand-border max-xl:bg-brand-light max-xl:rounded-3xl">
     <!-- Rounded blocks container (always horizontal) -->
-    <div class="flex gap-4 w-full min-h-18">
+    <div class="flex md:gap-4 gap-0 w-full min-h-18">
       <!-- Rounded block 1 -->
       <div :class="(navigationMenuOpen || searchDropdownOpen) ? 'rounded-t-3xl' : 'rounded-3xl'"
-        class="relative xl:grow grow-0 flex duration-200 justify-between items-center px-5 gap-8 xl:border border-brand-border xl:bg-brand-light">
+        class="relative xl:grow grow-0 flex duration-200 justify-between items-center md:px-5 px-2 md:gap-8 gap-2 xl:border border-brand-border xl:bg-brand-light">
         <a class="block text-teal-600" href="#">
           <span class="sr-only">Home</span>
           <svg class="md:size-14 size-12" width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -259,7 +252,7 @@
 
       <!-- Rounded block 2 -->
       <div
-        class="shrink-0 xl:grow-0 grow flex items-center justify-end gap-4 px-5 py-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
+        class="shrink-0 xl:grow-0 grow flex items-center justify-end md:gap-4 gap-2 md:px-5 px-2 py-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
         <div class="flex gap-2">
           <a href="#" class="button-secondary">
             Sign in
@@ -271,7 +264,7 @@
         </div>
 
         <!-- Navigation Burger Menu Button (Mobile) -->
-        <button @click="burgerNavigationSlideOpen=true" class="block rounded-md shadow-sm cursor-pointer bg-white hover:bg-brand-primary-100 border border-brand-border p-2.5 text-neutral-500 transition xl:hidden">
+        <button @click="burgerNavigationSlideOpen=true" class="block rounded-full cursor-pointer bg-white hover:bg-brand-primary-100 border border-brand-border p-2.5 text-neutral-500 transition xl:hidden">
           <span class="sr-only">Toggle menu</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="size-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
             stroke-width="2">
