--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -86,6 +86,10 @@
                 placeholder="Search"
                 class="w-full text-sm bg-transparent outline-none placeholder:text-neutral-500 text-brand-dark">
             </div>
+            <a href="#" class="button-text-icon" :class="searchDropdownOpen ? 'visible' : 'hidden'">
+              <span class="icon icon-close"></span>
+              <span>Cancel</span>
+            </a>
           </div>
 
           <!-- Navigation Dropdown (Desktop) -->
@@ -245,25 +249,49 @@
                     <div class="grid grid-cols-12 gap-3">
                       <!-- Placeholder Content Column 1 -->
                       <div class="col-span-4 flex flex-col gap-3">
-                        <div class="bg-white rounded-2xl px-5 py-5">
-                          <h3 class="text-lg heading-primary text-brand-dark mb-4">Popular Searches</h3>
-                          <div class="space-y-2">
-                            <p class="text-sm text-neutral-500">Placeholder content</p>
+                        <div class="bg-white rounded-2xl px-3 py-5">
+                          <div class="mb-4 px-4">
+                            <h3 class="text-base heading-primary text-brand-dark">Popular Searches</h3>
+                          </div>
+                          <div class="flex gap-2 flex-wrap">
+                            <span class="cursor-pointer bg-brand-background hover:bg-brand-background-dark rounded-full font-medium px-4 py-2 flex items-center justify-center md:text-sm text-xs">HydroPeptide</span>
+                            <span class="cursor-pointer bg-brand-background hover:bg-brand-background-dark rounded-full font-medium px-4 py-2 flex items-center justify-center md:text-sm text-xs">Dermaroller</span>
+                            <span class="cursor-pointer bg-brand-background hover:bg-brand-background-dark rounded-full font-medium px-4 py-2 flex items-center justify-center md:text-sm text-xs">Colorescience</span>
                           </div>
                         </div>
-                        <div class="bg-white rounded-2xl px-5 py-5">
-                          <h3 class="text-lg heading-primary text-brand-dark mb-4">Popular Searches</h3>
+
+                        <!-- FIXME: -->
+                        <div class="bg-white rounded-2xl px-3 py-5">
+                          <div class="mb-4 px-4">
+                            <h3 class="text-base heading-primary text-brand-dark">Collections</h3>
+                          </div>
                           <div class="space-y-2">
-                            <p class="text-sm text-neutral-500">Placeholder content</p>
+                            <ul class="space-y-1">
+                              <template x-for="(item, index) in Array(5).fill(0)">
+                                <li>
+                                  <a
+                                    class="w-full flex items-center justify-between px-4 py-3 rounded-lg text-xs font-bold tracking-wide uppercase text-neutral-600 hover:bg-brand-background-secondary hover:text-neutral-900 transition-colors">
+                                    <span>Text here</span>
+                                    <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                                    </svg>
+                                  </a>
+                                </li>
+                              </template>
+                            </ul>
                           </div>
                         </div>
                       </div>
 
                       <!-- Placeholder Content Column 2 -->
-                      <div class="col-span-8 bg-white rounded-2xl px-5 py-5">
-                        <h3 class="text-lg heading-primary text-brand-dark mb-4">Categories</h3>
-                        <div class="space-y-2">
-                          <p class="text-sm text-neutral-500">Placeholder content</p>
+                      <div class="col-span-8 bg-white rounded-2xl px-4 py-5">
+                        <div class="mb-4 px-3">
+                          <h3 class="text-base heading-primary text-brand-dark">Recommend products</h3>
+                        </div>
+                        <div x-data="{ loading: false }" class="grid lg:grid-cols-3 sm:grid-cols-2 lg:gap-3 gap-2">
+                          <load src="partials/components/product-card.html" />
+                          <load src="partials/components/product-card.html" />
+                          <load src="partials/components/product-card.html" />
                         </div>
                       </div>
                     </div>
@@ -312,6 +340,10 @@
       </div>
     </div>
 
+    <!-- FIXME: -->
+    <!-- FIXME: -->
+    <!-- FIXME: -->
+    <!-- FIXME: -->
     <!-- Search Slide-over (Mobile/Desktop) -->
     <template x-teleport="body">
       <div x-show="searchSlideOverOpen" @keydown.window.escape="searchSlideOverOpen=false" class="relative z-99">
@@ -330,8 +362,7 @@
                   class="flex overflow-y-scroll flex-col py-5 h-full bg-white border-l shadow-lg border-neutral-100/70">
                   <div class="px-4 xl:px-5">
                     <div class="flex justify-between items-start pb-1">
-                      <h2 class="text-base font-semibold leading-6 text-gray-900" id="slide-over-title">Slide Over
-                        Title</h2>
+                      <h2 class="text-base font-semibold leading-6 text-gray-900">Slide Over Title</h2>
                       <div class="flex items-center ml-3 h-auto">
                         <button @click="searchSlideOverOpen=false"
                           class="flex absolute right-0 z-30 justify-center items-center px-3 py-2 mt-6 mr-5 space-x-1 text-xs font-medium uppercase rounded-md border border-neutral-200 text-neutral-600 hover:bg-neutral-100">
@@ -478,7 +509,7 @@
       navigationMenu: '',
       activeCategory: '',
       searchSlideOverOpen: false,
-      searchDropdownOpen: false,
+      searchDropdownOpen: true,
       searchQuery: '',
       searchLoading: false,
       searchLoadingTimeout: null,
