Laying foundation for PDP with swiper carousel

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -509,7 +509,7 @@
       navigationMenu: '',
       activeCategory: '',
       searchSlideOverOpen: false,
-      searchDropdownOpen: true,
+      searchDropdownOpen: false,
       searchQuery: '',
       searchLoading: false,
       searchLoadingTimeout: null,
@@ -553,7 +553,7 @@
         'products': {
           column1: {
             title: 'Products',
-            link: { text: 'View all', url: '/products' }
+            link: { text: 'View all', url: '/collections' }
           },
           column2: {
             title: 'Popular Brands',
