--- a/app.css
+++ b/app.css
@@ -46,6 +46,10 @@
     line-height: 1.3;
   }
 
+  a {
+    text-underline-offset: 0.1rem;
+  }
+
   /* FIXME: double check this is safe */
   @media (min-width: 768px) {
     body {
