--- a/app.css
+++ b/app.css
@@ -64,7 +64,7 @@
     @apply md:rounded-3xl rounded-2xl mb-3 xl:py-16 xl:px-16 lg:py-8 lg:px-8 px-3 pt-5 pb-3 border border-brand-border;
   }
   .card-container-small {
-    @apply md:rounded-3xl rounded-2xl mb-3 px-6 py-6 border border-brand-border;
+    @apply md:rounded-3xl rounded-2xl mb-3 xl:px-6 xl:py-6 px-3 pt-5 pb-3 border border-brand-border;
   }
 
   .card-container-inner {
@@ -92,6 +92,9 @@
 
   .badge-text {
     @apply text-brand-primary-700 uppercase text-[12px] font-bold tracking-widest;
+  }
+  .badge-text-sm {
+    @apply text-brand-primary-700 uppercase text-[10px] font-bold tracking-widest;
   }
 
   .badge-transparent {
